fix(styles): icons too large on about page

--- a/assets/pages/index/page.css
+++ b/assets/pages/index/page.css
@@ -207,7 +207,7 @@ ul {
   }
 
   .icon {
-    font-size: 2em;
+    font-size: 1.7em;
   }
 
   #meat {
